# PistaDB

./: .gitignore  CMakeLists.txt  DEPLOY.md  INTEGRATION.md  LICENSE  Package.swift  README.md  README_CN.md  build.bat  build.sh  build_output.txt  build_vs.bat
Shuckr/: main.py  pistadb_driver.py  requirements.txt
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: pistadb_jni.c
android/src/main/java/com/pistadb/: IndexType.java  PistaDB.java  PistaDBException.java  PistaDBParams.java  SearchResult.java  VectorEntry.java
android/src/main/kotlin/com/pistadb/: PistaDBCoroutines.kt  PistaDBExtensions.kt
benchmarks/: benchmark_10m.py
cpp/: CMakeLists.txt
csharp/: PistaDB.csproj
docs/: benchmarks.md  benchmarks_cn.md  examples.md  examples_cn.md  language-bindings.md  language-bindings_cn.md
example_dbs/: .gitignore  common_text_g001.pst.meta.json  embed_cache.pcc  embedder.pcc
examples/: example.py  example_schema.py
go/: go.mod
go/pistadb/: batch.go  cache.go  pistadb.go  pistadb_test.go
ios/Sources/PistaDB/: PistaDB.swift  PistaDBAsync.swift  PistaDBExtensions.swift
ios/Sources/PistaDBObjC/: PSTDatabase.m
ios/Sources/PistaDBObjC/include/: PSTError.h  PSTIndexType.h  PSTParams.h  PSTVectorEntry.h  PistaDBObjC.h
libs/: README.md
python/: .gitignore  setup.py
python/pistadb/: __init__.py
rust/: build.rs
scripts/: README.md  paging_demo.py
scripts/linux/: build.sh
scripts/macos/: build.sh
scripts/windows/: build.bat
skills/pistadb/: SKILL.md
src/: distance.c  distance.h  distance_avx2.c  distance_neon.c  distance_simd.h  index_diskann.c  index_diskann.h  index_hnsw.c  index_hnsw.h  index_ivf.c  index_ivf.h  index_ivf_pq.c  index_ivf_pq.h  index_linear.c  index_linear.h  index_lsh.c  index_lsh.h  index_scann.c  index_scann.h  index_sq.c  index_sq.h  pager.c  pager.h  pistadb.c  pistadb.h  pistadb_batch.c  pistadb_batch.h  pistadb_cache.c  pistadb_cache.h  pistadb_txn.c  pistadb_txn.h  pistadb_types.h  storage.c  storage.h  utils.c  utils.h  vec_store.h
tests/: .gitignore  test_pistadb.py
wasm/: CMakeLists.txt  build.sh  pistadb_wasm.cpp
wrap/android/: CMakeLists.txt  proguard-rules.pro
wrap/android/src/main/java/com/pistadb/: Collection.java  CollectionSchema.java  DataType.java  FieldSchema.java  Hit.java  IndexType.java  Metric.java
wrap/android/src/main/kotlin/com/pistadb/: CollectionExtensions.kt
wrap/cpp/: CMakeLists.txt  pistadb.hpp  pistadb_schema.hpp
wrap/csharp/: Collection.cs  NativeMethods.cs  PistaDB.csproj  PistaDBTypes.cs  PistaDatabase.cs  Schema.cs
wrap/go/pistadb/: pistadb.go  schema.go
wrap/ios/Sources/PistaDB/: PistaDBSchema.swift  PistaDBTypes.swift
wrap/ios/Sources/PistaDBObjC/include/: PSTDatabase.h  PSTMetric.h  PSTSearchResult.h
wrap/python/pistadb/: __init__.py  schema.py
wrap/rust/: Cargo.toml  build.rs
wrap/rust/src/: ffi.rs  lib.rs  schema.rs  types.rs
wrap/wasm/: CMakeLists.txt  pistadb.d.ts  pistadb_schema.js
