[package]
name        = "pistadb"
version     = "0.1.0"
edition     = "2021"
description = "Rust binding for PistaDB — lightweight embedded vector database"
license     = "MIT"
readme      = "../README.md"

# Default build has no external runtime dependencies — pure std + FFI.
# The optional `schema` feature enables a Milvus-style multi-field collection
# layer that uses serde + serde_json to persist a JSON sidecar.
[dependencies]
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]

[features]
default = []
schema  = ["dep:serde", "dep:serde_json"]
